# YMat

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 1.ymat  blendDemo.ymat  color.ymat  color2.ymat  d.ymat  demo2.ymat  maskdemo.ymat  maskdemo2.ymat  mock.json  path2.ymat  pathdemo.ymat  png.ymat  precompdemo.ymat  result.json  text.ymat  textdemo.ymat  video.ymat  ymat_key.ymat
app/src/main/java/com/duowan/ymatrix/: MainActivity.kt  RestartActivity.kt  ShowActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_restart.xml  activity_show.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
ymat/: CMakeLists.txt  build.gradle
ymat/src/androidTest/java/com/yy/ymat/: ExampleInstrumentedTest.kt
ymat/src/main/cpp/: ymat.cpp
ymat/src/main/cpp/bean/: FrameBuffer.cpp  FrameBuffer.h  FrameInfo.h  TextureInfo.h  YMatConfig.cpp  YMatConfig.h  comp.h  element.h  layerinfo.h  pointrect.h  shapecontent.h  source.h  targetcomp.h  textdocattr.h  transform.h  transforminfo.h  yminfo.h
ymat/src/main/cpp/egl/: eglcore.cpp  eglcore.h
ymat/src/main/cpp/layer/: AbstractDrawer.cpp  AbstractDrawer.h  ElementCpuDrawer.cpp  ElementCpuDrawer.h  EllipseCpuDrawer.cpp  EllipseCpuDrawer.h  ImageDrawer.cpp  ImageDrawer.h  Layers.cpp  Layers.h  PathCpuDrawer.cpp  PathCpuDrawer.h  RectCpuDrawer.cpp  RectCpuDrawer.h  ShapeDrawer.cpp  ShapeDrawer.h  TextCpuDrawer.cpp  TextCpuDrawer.h  VectorDrawer.cpp  VectorDrawer.h  VideoDrawer.cpp  VideoDrawer.h  imagelayer.cpp  imagelayer.h  layer.cpp  layer.h  shaderlayer.h  textlayer.cpp  textlayer.h  vectorlayer.h  videolayer.cpp  videolayer.h
ymat/src/main/cpp/player/: rendercontroller.cpp  rendercontroller.h  ymatcontroller.cpp  ymatcontroller.h  ymatinfohandler.cpp  ymatinfohandler.h  ymatplayer.cpp  ymatplayer.h
ymat/src/main/cpp/render/: evarender.cpp  evarender.h  imageRender.cpp  imageRender.h  irender.h  mp4render.cpp  mp4render.h  render.cpp  render.h  vectorrender.cpp  vectorrender.h
ymat/src/main/cpp/tgfx/: ElementDrawer.cpp  ElementDrawer.h  EllipseDrawer.cpp  EllipseDrawer.h  PathDrawer.cpp  PathDrawer.h  RectDrawer.cpp  RectDrawer.h  TextDrawer.cpp  TextDrawer.h
ymat/src/main/cpp/utils/: TrackMatteType.h  blendmode.h  fillmode.h  glfloatarray.cpp  glfloatarray.h  layertype.h  matrix.cpp  matrix.h  shaderutil.cpp  shaderutil.h  texcoordsutil.cpp  texcoordsutil.h  textureloadutil.cpp  textureloadutil.h  transformutil.h  vertexutil.cpp  vertexutil.h  ymlog.cpp  ymlog.h
ymat/src/main/java/com/yy/: YMatrixPlayer.kt
ymat/src/main/java/com/yy/ymat/: YMatrixPlayer.kt
ymat/src/main/java/com/yy/ymat/bean/: AudioDecodeInfo.kt  DashesInfo.kt  ElementsInfo.kt  EllipseInfo.kt  FillInfo.kt  KeyInfo.kt  RectInfo.kt  ShapeInfo.kt  ShapeInfoCache.kt  ShapeLayerInfo.kt  StrokeInfo.kt  TexDocAttr.kt  TransformSimpleBean.kt  VideoDecodeInfo.kt  YMatDataHeader.kt  YMatDataNode.kt  YMatMediaDataSource.kt  YMatPlayerInfo.kt
ymat/src/main/java/com/yy/ymat/decoder/: YMatAudioDecoder.kt  YMatDecoder.kt  YMatHardDecoder.kt  YMatParser.kt
ymat/src/main/java/com/yy/ymat/player/: IYMatListener.kt  IYMatVideoListener.kt  YMatPlayer.kt  YMatSyner.kt
ymat/src/main/java/com/yy/ymat/render/: BaseShapeLayer.kt  EllipseLayer.kt  PathLayer.kt  RectLayer.kt  YMatRender.kt
ymat/src/main/java/com/yy/ymat/utils/: FileParseUtil.kt  JsonParser.java  MapTypeAdapter.java  SpeedControlUtil.kt  TransformUtil.java  TypeUtils.kt  YMBitmapUtil.kt  YMLog.kt  YMMediaUtil.kt  YMatConstant.kt  YMatJniUtils.kt  YMatThread.kt  YMatUtils.kt
ymat/src/main/java/com/yy/ymat/view/: IYMatView.kt  YMatSurfaceView.kt  YMatTextureView.kt  YMatView.kt
ymat/src/test/java/com/yy/ymat/: ExampleUnitTest.kt
ymatrix/: CMakeLists.txt  build.gradle.kts
ymatrix/src/main/cpp/: ymatrix.cpp
ymatrix/src/main/cpp/bean/: YMatConfig.cpp  YMatConfig.h  anchorpoint.h  comp.h  element.h  layerinfo.h  shadercontent.h  shapecontent.h  source.h  targetcomp.h  textdocattr.h  transform.h  transforminfo.h  yminfo.h
ymatrix/src/main/cpp/egl/: eglcore.h
ymatrix/src/main/cpp/layer/: imagelayer.h  shaderlayer.cpp  textlayer.h  vectorlayer.cpp  videolayer.h
ymatrix/src/main/cpp/utils/: YMatParser.cpp  YMatParser.h  shaderutil.cpp  shaderutil.h
ymatrix/src/main/java/com/yy/ymatrix/: YMatrixPlayer.kt
ymatrix/src/main/java/com/yy/ymatrix/utils/: YMBitmapUtil.kt  YMLog.kt  YMatrixUtils.kt
